# sec-report-translator

./: .gitignore  README.md  pyproject.toml
doc/: README_zh.md  SEC财报智能翻译工具实施方案.md  安装部署手册.md  用户使用手册.md
sec_report_translator/: cli.py  config.py  defaults.py  downloader.py  prompts.py  providers.py  translator.py  unpacker.py
tests/: test_cli_download.py  test_cli_init_config.py  test_cli_translate.py  test_cli_unpack.py  test_downloader_validation.py  test_prompts.py
