[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-report-translator"
version = "0.1.0"
description = "SEC filing unpacking and HTML report translation CLI"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "openai",
  "sec-edgar-downloader",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "Pillow",
  "pytest>=8.0",
]

[project.scripts]
sec-translator = "sec_report_translator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sec_report_translator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
